- Added a method to query the node's uptime from the OS, make it human-readable,   and display it on the status page. - Did something to my notes.  I don't remember what, I haven't even looked at   them since that change. - Added some code to display the human-readable node uptime.

--- a/control_panel/srv/controlpanel/index.html
+++ b/control_panel/srv/controlpanel/index.html
@@ -20,9 +20,7 @@
 <div id="main" align="right">
 <table border="1">
 <tr>
-<td>Node uptime</td>
-</tr>
-<tr>
+<td>Node uptime:</td>
 <td>${uptime}</td>
 </tr>
 </table>
@@ -31,7 +29,7 @@
 <tr>
 <td>1 minute load</td>
 <td>5 minute load</td>
-<td>10 minute load</td>
+<td>15 minute load</td>
 <td>memory (in kb)</td>
 <td>memory used (in kb)</td>
 <td>swap (in kb)</td>
@@ -40,7 +38,7 @@
 <tr>
 <td>${one_minute_load}</td>
 <td>${five_minute_load}</td>
-<td>${ten_minute_load}</td>
+<td>${fifteen_minute_load}</td>
 <td>${ram}</td>
 <td>${ram_used}</td>
 <td>${swap}</td>
