Signed-off-by: The Doctor <drwho@virtadpt.net>
- Added dynamic network traffic graphs to the /index.html template.
- Figured out how to get static content (i.e. image files) displayed by CherryPy
  by configuring a couple of static content handlers.
- Added network traffic graphs to the /index.html template.  It seems that you
  can, in fact, pack HTML wholesale into variables and get it displayed when
  you want it.

--- a/control_panel/srv/controlpanel/index.html
+++ b/control_panel/srv/controlpanel/index.html
@@ -45,6 +45,9 @@
 <td>${swap_used}</td>
 </tr>
 </table>
+
+<!-- This is where the PNG files from rrdtool are referenced.  That variable contains HTML code. -->
+${graphs}
 </div>
 
 </body>
