--- a/control_panel/srv/controlpanel/traffic/index.html
+++ b/control_panel/srv/controlpanel/traffic/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!-- This includes all of the stuff to set up an HTML page. -->
 <!-- Uses the Mako templating system (http://www.makotemplates.org/).) -->
-<!-- /index.html - Shows status of the Byzantium node. -->
+<!-- /index.html - Displays graphics of traffic statistics. -->
 
 <html>
 <head>
