--- a/control_panel/srv/controlpanel/network/step1.html
+++ b/control_panel/srv/controlpanel/network/step1.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <!-- This includes all of the stuff to set up an HTML page. -->
 <!-- Uses the Mako templating system (http://www.makotemplates.org/).) -->
-<!-- /index.html - Shows status of the Byzantium node. -->
+<!-- /network/step1.html - The user can either enter an IP address or netmask, or let the control panel
+      choose one randomly. -->
 
 <html>
 <head>
@@ -18,10 +19,31 @@
 
 <!-- This is where all of the content of the network traffic report page goes. -->
 <div id="main" align="right">
-<!-- This is where the PNG files from rrdtool are referenced.  That variable contains HTML code. -->
-${graphs}
-</div>
 
+You have selected network interface ${interface} to configure.  Do you want to enter an IP address
+for this interface, or do you want me to choose one for you?
+
+<p>Enter an  IP address and netmask:</p>
+<form action="enter_ip" method="post">
+<input type="hidden" name="network_interface" value="${interface}">
+<input type="text" name="octet_one" value="" size="3" maxlength="3" />.
+<input type="text" name="octet_two" value="" size="3" maxlength="3" />.
+<input type="text" name="octet_three" value="" size="3" maxlength="3" />.
+<input type="text" name="octet_four" value="" size="3" maxlength="3" /><br />
+<input type="text" name="netmask_one" value="" size="3" maxlength="3" />.
+<input type="text" name="netmask_two" value="" size="3" maxlength="3" />.
+<input type="text" name="netmask_three" value="" size="3" maxlength="3" />.
+<input type="text" name="netmask_four" value="" size="3" maxlength="3" /><br />
+<input type="submit" value="Submit" />
+<input type="reset" value="Clear" />
+</form>
+
+<!-- <p>Pick a random RFC 1918 address.</p>
+<form action="random_ip" method="post">
+<input type="button" name="random" value="True" />
+</form> -->
+
+</div>
 </body>
 <!-- In case you haven't figured it out, I suck at web design. -The Doctor -->
 </html>
