- Broke, then fixed control_panel.py.  Ignore. - Got configuration of a network interface with a specific IP address/netmask   working.  As it turns out, to pass variables between logically-linked   methods, hidden forms are used. - Deleted some comments in the srv/controlpanel/network/*.html files.  They   had no business being in there. - Got the step2.html template working.  Also got the abort-to-/ button working. - Created done.html, which is what the network interface configuration   processes will eventually get to.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/network/step2.html
+++ b/control_panel/srv/controlpanel/network/step2.html
@@ -22,7 +22,14 @@
 <p>The IP address you entered is: ${ip_address}.</p>
 <p>The netmask for the IP network you entered is: ${netmask}.</p>
 
+<form action="set_ip" method="post">
+<input type="hidden" name="interface" value="${interface}">
+<input type="hidden" name="ip_address" value="${ip_address}">
+<input type="hidden" name="netmask" value="${netmask}">
+<input type="submit" value="Configure">
+<input type="button" name="Cancel" value="Cancel" onclick="window.location='/'">
+</form>
+
 </div>
 </body>
-<!-- In case you haven't figured it out, I suck at web design. -The Doctor -->
 </html>
