--- a/control_panel/srv/controlpanel/network/step1.html
+++ b/control_panel/srv/controlpanel/network/step1.html
@@ -20,30 +20,29 @@
 <!-- This is where all of the content of the network traffic report page goes. -->
 <div id="main" align="right">
 
-You have selected network interface ${interface} to configure.  Do you want to enter an IP address
-for this interface, or do you want me to choose one for you?
+You have selected network interface ${interface} to configure.  You can:
 
 <p>Enter an  IP address and netmask:</p>
 <form action="enter_ip" method="post">
-<input type="hidden" name="network_interface" value="${interface}">
-<input type="text" name="octet_one" value="" size="3" maxlength="3" />.
-<input type="text" name="octet_two" value="" size="3" maxlength="3" />.
-<input type="text" name="octet_three" value="" size="3" maxlength="3" />.
-<input type="text" name="octet_four" value="" size="3" maxlength="3" /><br />
-<input type="text" name="netmask_one" value="" size="3" maxlength="3" />.
-<input type="text" name="netmask_two" value="" size="3" maxlength="3" />.
-<input type="text" name="netmask_three" value="" size="3" maxlength="3" />.
-<input type="text" name="netmask_four" value="" size="3" maxlength="3" /><br />
+<input type="hidden" name="interface" value="${interface}">
+<input type="text" name="octet_one" size="3" maxlength="3" tabindex="1" />.
+<input type="text" name="octet_two" size="3" maxlength="3" tabindex="2" />.
+<input type="text" name="octet_three" size="3" maxlength="3" tabindex="3" />.
+<input type="text" name="octet_four" size="3" maxlength="3" tabindex="4" /><br />
+<input type="text" name="netmask_one" size="3" maxlength="3" tabindex="5" />.
+<input type="text" name="netmask_two" size="3" maxlength="3" tabindex="6" />.
+<input type="text" name="netmask_three" size="3" maxlength="3" tabindex="7" />.
+<input type="text" name="netmask_four" size="3" maxlength="3" tabindex="8" /><br />
 <input type="submit" value="Submit" />
 <input type="reset" value="Clear" />
 </form>
 
-<!-- <p>Pick a random RFC 1918 address.</p>
+<p>Pick a random RFC 1918 address.</p>
 <form action="random_ip" method="post">
-<input type="button" name="random" value="True" />
-</form> -->
+<input type="hidden" name="interface" value="${interface}">
+<input type="button" name="random" value="Random" />
+</form>
 
 </div>
 </body>
-<!-- In case you haven't figured it out, I suck at web design. -The Doctor -->
 </html>
