- I still don't know why none of these files were committed when I pushed   everything up on 14 July.  Trying again.

--- a/control_panel/srv/controlpanel/network/index.html
+++ b/control_panel/srv/controlpanel/network/index.html
@@ -21,7 +21,7 @@
 <!-- List of wireless network interfaces. -->
 <h2>Wireless network interfaces</h2>
 <table border="1">
-<form action="step1" method="post">
+<form action="wireless" method="post">
 <tr>${wireless_buttons}</tr>
 </form>
 </table>
@@ -29,7 +29,7 @@
 <!-- List of Ethernet interfaces. -->
 <h2>Ethernet interfaces</h2>
 <table border="1">
-<form action="step1" method="post">
+<form action="tcpip" method="post">
 <tr>${ethernet_buttons}</tr>
 </form>
 </table>
