- Added Mako variables to /network/[tcpip,wireless].html so that the underlying   application server can insert an interface's current settings if it's already   been configured.

--- a/control_panel/srv/controlpanel/network/tcpip.html
+++ b/control_panel/srv/controlpanel/network/tcpip.html
@@ -24,14 +24,14 @@
 
 <p>Enter an  IP address and netmask:</p>
 <form action="enter_ip" method="post">
-<input type="text" name="octet_one" size="3" maxlength="3" tabindex="1" />.
-<input type="text" name="octet_two" size="3" maxlength="3" tabindex="2" />.
-<input type="text" name="octet_three" size="3" maxlength="3" tabindex="3" />.
-<input type="text" name="octet_four" size="3" maxlength="3" tabindex="4" /><br />
-<input type="text" name="netmask_one" size="3" maxlength="3" tabindex="5" />.
-<input type="text" name="netmask_two" size="3" maxlength="3" tabindex="6" />.
-<input type="text" name="netmask_three" size="3" maxlength="3" tabindex="7" />.
-<input type="text" name="netmask_four" size="3" maxlength="3" tabindex="8" /><br />
+<input type="text" name="octet_one" size="3" maxlength="3" tabindex="1" value="${octet_one}" />.
+<input type="text" name="octet_two" size="3" maxlength="3" tabindex="2" value="${octet_two}" />.
+<input type="text" name="octet_three" size="3" maxlength="3" tabindex="3" value="${octet_three}" />.
+<input type="text" name="octet_four" size="3" maxlength="3" tabindex="4" value="${octet_four}" /><br />
+<input type="text" name="netmask_one" size="3" maxlength="3" tabindex="5" value="${netmask_one}" />.
+<input type="text" name="netmask_two" size="3" maxlength="3" tabindex="6" value="${netmask_two}" />.
+<input type="text" name="netmask_three" size="3" maxlength="3" tabindex="7" value="${netmask_three}" />.
+<input type="text" name="netmask_four" size="3" maxlength="3" tabindex="8" value="${netmask_four}" /><br />
 <input type="submit" value="Submit" />
 <input type="reset" value="Clear" />
 </form>
