--- a/control_panel/srv/controlpanel/network/wireless.html
+++ b/control_panel/srv/controlpanel/network/wireless.html
@@ -22,8 +22,8 @@
 
 <p>Enter the wireless channel and ESSID the network interface will use (default: 3 / Byzantium):</p>
 <form action="tcpip" method="post">
-<input type="text" name="channel" size="2" maxlength="2" value="3" />
-<input type="text" name="essid" size="32" maxlength="32" value="Byzantium" />
+<input type="text" name="channel" size="2" maxlength="2" value="${channel}" />
+<input type="text" name="essid" size="32" maxlength="32" value="${essid}" />
 <input type="submit" value="Submit" />
 <input type="reset" value="Clear" />
 </form>
