- Added the mesh configuration class constructor call to status.py. - Created the meshconfiguration.py file, which contains the class of the same   name and does what you'd expect it to.  So far there are two methods,   corresponding to /mesh/[index,addtomesh].html. - Initial commit of the /mesh/index.html file. - Fixed minor typographical errors in the /network/wireless.html file's   comments. - Created the SQLite databases to store mesh interface configs.

--- a/control_panel/srv/controlpanel/network/wireless.html
+++ b/control_panel/srv/controlpanel/network/wireless.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<!-- Uses the Mako templating system (http://www.makotemplates.org/).) -->
-<!-- /network/wireless.html - The user enters wireness network parameters . -->
+<!-- Uses the Mako templating system (http://www.makotemplates.org/). -->
+<!-- /network/wireless.html - The user enters wireless network parameters. -->
 
 <html>
 <head>
