--- a/control_panel/srv/controlpanel/mesh/index.html
+++ b/control_panel/srv/controlpanel/mesh/index.html
@@ -15,6 +15,7 @@
 <%include file="/includes/leftbar.html" />
 
 <div id="main" align="right">
+<!-- If an error is detected, it'll be printed here.  Otherwise, this is just a blank line. -->
 ${error}
 
 <!-- List of meshable network interfaces. -->
