- Added Services.webapps() method to ask the user to toggle a supported web app. - Fixed a comment bug in mesh/addtomesh.html.  The perils of copying other HTML   files to re-use the fiddly stuff... - Changed the table code in services/index.html to support multiple rows because   I messed it up the first time. - Initial commit of services/webapp.html, which asks the user if they really want   to toggle a webapp on the node.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/services/index.html
+++ b/control_panel/srv/controlpanel/services/index.html
@@ -23,16 +23,8 @@ ${error}
 <!-- List of web applications. -->
 <h2>Web applications</h2>
 <table border="1">
-<form action="MOOF MOOF MOOFs" method="post">
-<tr>${webapps}</tr>
-</form>
-</table>
-
-<!-- List of system services. -->
-<h2>System services</h2>
-<table border="1">
-<form action="MOOF MOOF MOOF" method="post">
-<tr>${systemservices}</tr>
+<form action="webapps" method="post">
+${webapps}
 </form>
 </table>
 
