I forgot to note in the last commit that I'd refactored Services.webapps() so that it didn't make SQL requests for the same stuff over and over again.  I did this by adding a couple of class attributes that cache the user's input to be acted on later.  This is why running `git commit -as` should be run often, but `git push` should be done only after everything works.
- Fixed some HTML formatting bugs in Services.webapps().
- Added code to Services.index() to generate an HTML table for system services.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/services/index.html
+++ b/control_panel/srv/controlpanel/services/index.html
@@ -28,6 +28,14 @@ ${webapps}
 </form>
 </table>
 
+<!-- List of system services. -->
+<h2>System services</h2>
+<table border="1">
+<form action="services" method="post">
+${systemservices}
+</form>
+</table>
+
 </div>
 </body>
 </html>
