- Initial commit of Services.services(). - Reworded services/webapp.html a bit.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/services/webapp.html
+++ b/control_panel/srv/controlpanel/services/webapp.html
@@ -17,7 +17,7 @@
 
 <div id="main" align="right">
 
-<p>Are you sure you want to ${action} the ${app} web application?</p>
+<p>You have chosen to ${action} the ${app} web application.</p>
 <p>${warning}  Are you sure you want to do this?</p>
 
 <p>Click the "${action}" button to turn it on or the "Cancel" button to abort!</p>
