- Fixed bugs in the form fields of the [services,webapp].html files.  The name of   the variables the arguments were put in weren't specified.  Oops. - Debugging services.py in tandem with the HTML files.  I have to pull some   debugging instrumentation out when I'm done.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/services/webapp.html
+++ b/control_panel/srv/controlpanel/services/webapp.html
@@ -22,7 +22,7 @@
 
 <p>Click the "${action}" button to turn it on or the "Cancel" button to abort!</p>
 <form action="toggle_webapp" method="post">
-<input type="submit" value="${action}" />
+<input type="submit" name="action" value="${action}" />
 <input type="reset" value="Cancel" />
 </form>
 
