--- a/control_panel/srv/controlpanel/services/services.html
+++ b/control_panel/srv/controlpanel/services/services.html
@@ -22,7 +22,7 @@
 
 <p>Click the "${action}" button to execute the command or the "Cancel" button to abort!</p>
 <form action="toggle_service" method="post">
-<input type="submit" value="${action}" />
+<input type="submit" name="action" value="${action}" />
 <input type="reset" value="Cancel" />
 </form>
 
