- Edited two of the HTML templates for the network configuration subsystem   because their interfaces changed.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/network/wireless.html
+++ b/control_panel/srv/controlpanel/network/wireless.html
@@ -20,7 +20,7 @@
 
 <p>You have selected wireless interface ${interface} to configure.</p>
 
-<p>Enter the wireless channel and ESSID the network interface will use (default: 3 / Byzantium):</p>
+<p>Enter the wireless channel and ESSID the network interface will use (default: ${channel} / ${essid}):</p>
 <form action="tcpip" method="post">
 <input type="text" name="channel" size="2" maxlength="2" value="${channel}" />
 <input type="text" name="essid" size="32" maxlength="32" value="${essid}" />
