- Edited a variable in the network/confirm.html template to fix a runtime error   in Mako.  On my test platform it seems to have taken.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/network/confirm.html
+++ b/control_panel/srv/controlpanel/network/confirm.html
@@ -18,7 +18,7 @@
 <%include file="/includes/leftbar.html" />
 
 <div id="main" align="right">
-<p>The network interface you want to enable is: ${mesh_interface}</p>
+<p>The network interface you want to enable is: ${interface}</p>
 <p>The mesh IP address is: ${mesh_ip}/${mesh_netmask}</p>
 <p>The client interface IP address is: ${client_ip}/${client_netmask}</p>
 
