- Added a hidden variable that displays a warning to wireless.html. - Added a check in NetworkConfiguration.wireless() that tests to see if the   interface is already flagged as configured in the database, and sets a warning   message if it is.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/network/wireless.html
+++ b/control_panel/srv/controlpanel/network/wireless.html
@@ -20,6 +20,9 @@
 
 <p>You have selected wireless interface ${interface} to configure.</p>
 
+<!-- If this variable is set, the user is trying to reconfigure an active interface. -->
+${warning}
+
 <p>Enter the wireless channel and ESSID the network interface will use (default: ${channel} / ${essid}):</p>
 <form action="tcpip" method="post">
 <input type="text" name="channel" size="2" maxlength="2" value="${channel}" />
