--- a/control_panel/srv/controlpanel/network/done.html
+++ b/control_panel/srv/controlpanel/network/done.html
@@ -15,7 +15,9 @@
 
 <div id="main" align="right">
 
-<p>${interface} configured with: ${ip_address}/${netmask}</p>
+<p>Mesh interface ${interface} IP configuration: ${ip_address}/${netmask}</p>
+
+<p>Mesh clients: ${client_ip}/${client_netmask}</p>
 
 <p>Now, <a href="/mesh">configure mesh routing</a>.</p>
 
