- Fixed an inconsistency in the toggled.html template. - Forgot a self. reference in the confirmation page of services.py.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/services/toggled.html
+++ b/control_panel/srv/controlpanel/services/toggled.html
@@ -17,7 +17,9 @@
 
 <div id="main" align="right">
 
-<p>Application ${app} has been ${status}.</p>
+${error}
+
+<p>Application ${app} has been ${action}.</p>
 
 <p><a href="/services">Return to the services menu.</a></p>
 
