--- a/control_panel/srv/controlpanel/gateways/index.html
+++ b/control_panel/srv/controlpanel/gateways/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!-- This includes all of the stuff to set up an HTML page. -->
 <!-- Uses the Mako templating system (http://www.makotemplates.org/).) -->
-<!-- /gateways/index.html - Allows the user to choose a network interface to use as a gateway. -->
+<!-- /network/index.html - Allows the user to choose a network interface to configure. -->
 
 <html>
 <head>
