- Updated the submit button of the confirm.html template to pass the name of   the network interface to the Gateways.activate() method.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/gateways/confirm.html
+++ b/control_panel/srv/controlpanel/gateways/confirm.html
@@ -20,7 +20,7 @@
 <p>The network interface you want to turn into a gateway is: ${interface}</p>
 
 <form action="activate" method="post">
-<input type="submit" value="Configure">
+<input type="submit" name="interface" value="${interface}">
 <input type="button" name="Cancel" value="Cancel" onclick="window.location='/'">
 </form>
 
