- Modified confirm.html template so it has a hidden variable that will hold   wireless configuration information if it's defined. - Modified Gateways.tcpip() to be aware of wireless configuration information   passed as arguments, and stores them in class attributes if they're there. - Added some class attributes to Gateways() to hold configuration information   in a persistent manner.  This is for the purpose of being able to configure   wireless interfaces.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/gateways/confirm.html
+++ b/control_panel/srv/controlpanel/gateways/confirm.html
@@ -19,6 +19,9 @@
 <div id="main" align="right">
 <p>The network interface you want to turn into a gateway is: ${interface}</p>
 
+<!-- This variable will only be defined if the user selected a wireless interface. -->
+${iwconfigs}
+
 <form action="activate" method="post">
 <input type="submit" name="interface" value="${interface}">
 <input type="button" name="Cancel" value="Cancel" onclick="window.location='/'">
