- Bad spelling.  Template fail.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/services/toggled.html
+++ b/control_panel/srv/controlpanel/services/toggled.html
@@ -19,7 +19,7 @@
 
 ${error}
 
-<p>Application ${app} has been ${action}.</p>
+<p>Application ${app} has been ${action}d.</p>
 
 <p><a href="/services">Return to the services menu.</a></p>
 
