- Issue #36: Altered NetworkConfiguration.make_hosts() to return an error   condition if the /etc/hosts.mesh file had to be reverted to the backup copy.   Altered NetworkConfiguration.set_ip() to test for and catch the error   condition. - Updated network/done.html template to include a hidden error variable.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/network/done.html
+++ b/control_panel/srv/controlpanel/network/done.html
@@ -15,9 +15,9 @@
 
 <div id="main" align="right">
 
-<p>Mesh interface ${interface} IP configuration: ${ip_address}/${netmask}</p>
+${error}
 
-<p>Mesh clients: ${client_ip}/${client_netmask}</p>
+<p>${interface} configured with: ${ip_address}/${netmask}</p>
 
 <p>Now, <a href="/mesh">configure mesh routing</a>.</p>
 
