--- a/control_panel/srv/controlpanel/network/wireless.html
+++ b/control_panel/srv/controlpanel/network/wireless.html
@@ -6,18 +6,21 @@
 <head>
 <meta charset="utf-8" />
 <title>${title}</title>
+<link rel="stylesheet" href="/controlpanel/css/reset.css" />
+<link rel="stylesheet" href="/controlpanel/css/style.css" />
+<link rel="stylesheet" href="/controlpanel/css/text.css" />
 </head>
 
 <body>
+<div id="container">
 <!-- Pull in the code for the top part of the page that says what this page is for. -->
-<%include file="/includes/header.html" />
+<div id="header"><%include file="/includes/header.html" /></div>
 
 <!-- Pull in the code for the left part of the page that contains links to sub-apps. -->
-<%include file="/includes/leftbar.html" />
+<div id="leftsidebar"><%include file="/includes/leftbar.html" /></div>
 
 <!-- This is where all of the content of the network traffic report page goes. -->
-<div id="main" align="right">
-
+<div id="mainInfo">
 <p>You have selected wireless interface ${interface} to configure.</p>
 
 <!-- If this variable is set, the user is trying to reconfigure an active interface. -->
@@ -30,6 +33,9 @@ ${warning}
 <input type="submit" value="Submit" />
 <input type="reset" value="Clear" />
 </form>
+
+</div>
+<div id="footer"></div>
 
 </div>
 </body>
