--- a/control_panel/srv/controlpanel/error.html
+++ b/control_panel/srv/controlpanel/error.html
@@ -7,18 +7,23 @@
 <head>
 <meta charset="utf-8" />
 <title>${title}</title>
+<link rel="stylesheet" href="css/reset.css" />
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/text.css" />
 </head>
 
 <body>
-<!-- Pull in the code for the top part of the page that says what this page is for. -->
-<%include file="/includes/header.html" />
+<div id="container"><!-- Pull in the code for the top part of the page that says what this page is for. -->
+<div id="header"><%include file="/includes/header.html" /></div>
 
 <!-- Pull in the code for the left part of the page that contains links to sub-apps. -->
-<%include file="/includes/leftbar.html" />
+<div id="leftsidebar"><%include file="/includes/leftbar.html" /></div>
 
 <!-- This is where all of the content of the status page goes. -->
-<div id="main" align="right">
+<div id="mainInfo">
 ${error}
+</div>
+<div id="footer"></div>
+</div>
 </body>
-<!-- In case you haven't figured it out, I suck at web design. -The Doctor -->
 </html>
