--- a/control_panel/srv/controlpanel/gateways/done.html
+++ b/control_panel/srv/controlpanel/gateways/done.html
@@ -7,16 +7,25 @@
 <head>
 <meta charset="utf-8" />
 <title>${title}</title>
+<link rel="stylesheet" href="/controlpanel/css/reset.css" />
+<link rel="stylesheet" href="/controlpanel/css/style.css" />
+<link rel="stylesheet" href="/controlpanel/css/text.css" />
 </head>
 
 <body>
-<%include file="/includes/header.html" />
-<%include file="/includes/leftbar.html" />
+<div id="container">
+<!-- Pull in the code for the top part of the page that says what this page is for. -->
+<div id="header"><%include file="/includes/header.html" /></div>
 
-<div id="main" align="right">
+<!-- Pull in the code for the left part of the page that contains links to sub-apps. -->
+<div id="leftsidebar"><%include file="/includes/leftbar.html" /></div>
+
+<div id="mainInfo">
 
 <p>${interface} is now configured as a gateway.</p>
 
+</div>
+<div id="footer"></div>
 </div>
 </body>
 </html>
