--- a/control_panel/srv/controlpanel/mesh/addtomesh.html
+++ b/control_panel/srv/controlpanel/mesh/addtomesh.html
@@ -7,16 +7,22 @@
 <head>
 <meta charset="utf-8" />
 <title>${title}</title>
+<link rel="stylesheet" href="/controlpanel/css/reset.css" />
+<link rel="stylesheet" href="/controlpanel/css/style.css" />
+<link rel="stylesheet" href="/controlpanel/css/text.css" />
 </head>
 
+
 <body>
+<div id="container">
+
 <!-- Pull in the code for the top part of the page that says what this page is for. -->
-<%include file="/includes/header.html" />
+<div id="header"><%include file="/includes/header.html" /></div>
 
 <!-- Pull in the code for the left part of the page that contains links to sub-apps. -->
-<%include file="/includes/leftbar.html" />
+<div id="leftsidebar"><%include file="/includes/leftbar.html" /></div>
 
-<div id="main" align="right">
+<div id="mainInfo">
 
 <p>You have selected interface ${interface} to add to the mesh.</p>
 
@@ -27,6 +33,9 @@
 <input type="submit" value="Enable" />
 <input type="reset" value="Cancel" />
 </form>
+
+</div>
+<div id="footer"></div>
 
 </div>
 </body>
