- Added two new HTML templates for the mesh configuration system, disabled.html   and removefrommesh.html.  Those are used for pretty much what you would   expect. - Updated mesh/index.html to have a second table, this one for active mesh   interfaces that can be taken down by the user. - Added methods to meshconfiguration.py that allow the user to select a mesh   interface and take it out of the mesh (while leaving it configured, just not   running).
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/mesh/index.html
+++ b/control_panel/srv/controlpanel/mesh/index.html
@@ -26,6 +26,14 @@ ${error}
 </form>
 </table>
 
+<!-- List of active mesh interfaces. -->
+<h2>Active mesh interfaces</h2>
+<table border="1">
+<form action="removefrommesh" method="post">
+<tr>${active_interfaces}</tr>
+</form>
+</table>
+
 </div>
 </body>
 </html>
