--- a/control_panel/srv/controlpanel/network/done.html
+++ b/control_panel/srv/controlpanel/network/done.html
@@ -7,9 +7,9 @@
 <head>
 <meta charset="utf-8" />
 <title>${title}</title>
-<link rel="stylesheet" href="/controlpanel/css/reset.css" />
-<link rel="stylesheet" href="/controlpanel/css/style.css" />
-<link rel="stylesheet" href="/controlpanel/css/text.css" />
+<link rel="stylesheet" href="css/reset.css" />
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/text.css" />
 </head>
 
 
@@ -19,9 +19,11 @@
 <div id="header"><%include file="/includes/header.html" /></div>
 <div id="leftsidebar"><%include file="/includes/leftbar.html" /></div>
 
-${error}
+
 
 <div id="mainInfo">
+<p>${error}</p>
+
 <p>Mesh interface ${interface} IP configuration: ${ip_address}/${netmask}</p>
 
 <p>Now, <a href="/mesh">configure mesh routing</a>.</p>
