--- a/control_panel/srv/controlpanel/services/toggled.html
+++ b/control_panel/srv/controlpanel/services/toggled.html
@@ -6,9 +6,9 @@
 <head>
 <meta charset="utf-8" />
 <title>${title}</title>
-<link rel="stylesheet" href="/controlpanel/css/reset.css" />
-<link rel="stylesheet" href="/controlpanel/css/style.css" />
-<link rel="stylesheet" href="/controlpanel/css/text.css" />
+<link rel="stylesheet" href="css/reset.css" />
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/text.css" />
 </head>
 
 <body>
