--- a/control_panel/srv/controlpanel/mesh/removefrommesh.html
+++ b/control_panel/srv/controlpanel/mesh/removefrommesh.html
@@ -6,9 +6,9 @@
 <head>
 <meta charset="utf-8" />
 <title>${title}</title>
-<link rel="stylesheet" href="css/reset.css" />
-<link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/text.css" />
+<link rel="stylesheet" href="/css/reset.css" />
+<link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" href="/css/text.css" />
 </head>
 
 
