- Commented out the HTML for configuring Ethernet interfaces in   network/index.html because ifplugd does that for us.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/network/index.html
+++ b/control_panel/srv/controlpanel/network/index.html
@@ -31,12 +31,14 @@
 </table>
 
 <!-- List of Ethernet interfaces. -->
-<h2>Ethernet interfaces</h2>
+<-- MOOF MOOF MOOF - commented out because ifplugd manages Ethernet interfaces now.  Leaving it here if we need to resurrect
+	 it. -->
+<!-- <h2>Ethernet interfaces</h2>
 <table border="1">
 <form action="tcpip" method="post">
 <tr>${ethernet_buttons}</tr>
 </form>
-</table>
+</table> -->
 
 </div>
 <div id="footer"></div>
