- Fixed a bad HTML comment tag.  Haxwithaxe is opening a ticket for it at   Github.  I'm really tired and kind of sore and I'm not thinking straight.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/network/index.html
+++ b/control_panel/srv/controlpanel/network/index.html
@@ -31,7 +31,7 @@
 </table>
 
 <!-- List of Ethernet interfaces. -->
-<-- MOOF MOOF MOOF - commented out because ifplugd manages Ethernet interfaces now.  Leaving it here if we need to resurrect
+<!-- MOOF MOOF MOOF - commented out because ifplugd manages Ethernet interfaces now.  Leaving it here if we need to resurrect
 	 it. -->
 <!-- <h2>Ethernet interfaces</h2>
 <table border="1">
