Updated network/done.html to display the PID of captive_portal.py (or an error message) as well as any errors that may have occurred.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/network/done.html
+++ b/control_panel/srv/controlpanel/network/done.html
@@ -19,12 +19,12 @@
 <div id="header"><%include file="/includes/header.html" /></div>
 <div id="leftsidebar"><%include file="/includes/leftbar.html" /></div>
 
-
-
 <div id="mainInfo">
 <p>${error}</p>
 
 <p>Mesh interface ${interface} IP configuration: ${ip_address}/${netmask}</p>
+
+<p>Captive portal daemon running, PID: ${portal_pid}</p>
 
 <p>Now, <a href="/mesh">configure mesh routing</a>.</p>
 
