Fixed some comments in the HTML templates used by gateways.py.  Some were holdovers from the HTML templates I'd copied to make them to save time.  Also made some of the user text more user-friendly.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/gateways/confirm.html
+++ b/control_panel/srv/controlpanel/gateways/confirm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!-- This includes all of the stuff to set up an HTML page. -->
 <!-- Uses the Mako templating system (http://www.makotemplates.org/).) -->
-<!-- /gateways/confirm.html - The user is given a chance to enable or cancel gateway setup. -->
+<!-- /gateways/confirm.html - The user is given the option to enable or cancel gateway setup. -->
 
 <html>
 <head>
