--- a/control_panel/srv/controlpanel/gateways/done.html
+++ b/control_panel/srv/controlpanel/gateways/done.html
@@ -22,7 +22,7 @@
 
 <div id="mainInfo">
 
-<p>${interface} is now configured as a gateway.</p>
+<p>${interface} is now configured as a gateway from the mesh to another network.</p>
 
 </div>
 <div id="footer"></div>
