--- a/control_panel/srv/controlpanel/gateways/index.html
+++ b/control_panel/srv/controlpanel/gateways/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!-- This includes all of the stuff to set up an HTML page. -->
 <!-- Uses the Mako templating system (http://www.makotemplates.org/).) -->
-<!-- /network/index.html - Allows the user to choose a network interface to configure. -->
+<!-- /gateways/index.html - Allows the user to set up a network interface as a mesh gateway. -->
 
 <html>
 <head>
@@ -23,7 +23,7 @@
 <div id="mainInfo">
 
 <!-- List of Ethernet interfaces. -->
-<h2>Ethernet interfaces</h2>
+<h2>Wired interfaces</h2>
 <table border="1">
 <form action="tcpip" method="post">
 <tr>${ethernet_buttons}</tr>
