Fixed the cancel buttons not working.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/services/services.html
+++ b/control_panel/srv/controlpanel/services/services.html
@@ -27,7 +27,7 @@
 <p>Click the "${action}" button to execute the command or the "Cancel" button to abort!</p>
 <form action="toggle_service" method="post">
 <input type="submit" name="action" value="${action}" />
-<input type="reset" value="Cancel" />
+<a href="/services"><input type="button" name="cancel" value="Cancel" /></a>
 </form>
 
 </div>
