--- a/control_panel/srv/controlpanel/services/webapp.html
+++ b/control_panel/srv/controlpanel/services/webapp.html
@@ -26,7 +26,7 @@
 
 <form action="toggle_webapp" method="post">
 <input type="submit" name="action" value="${action}" />
-<input type="reset" value="Cancel" />
+<a href="/services"><input type="button" name="cancel" value="Cancel" /></a>
 </form>
 
 </div>
