Fixed non-working cancel HTML buttons.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/srv/controlpanel/mesh/addtomesh.html
+++ b/control_panel/srv/controlpanel/mesh/addtomesh.html
@@ -31,7 +31,7 @@
 <p>Click the "Enable" button to activate or the "Cancel" button to abort!</p>
 <form action="enable" method="post">
 <input type="submit" value="Enable" />
-<input type="reset" value="Cancel" />
+<a href="/mesh"><input type="button" name="cancel" value="Cancel" /></a>
 </form>
 
 </div>
