--- a/control_panel/srv/controlpanel/mesh/removefrommesh.html
+++ b/control_panel/srv/controlpanel/mesh/removefrommesh.html
@@ -27,7 +27,7 @@
 <p>Click the "Remove" button to disable that interface or the "Cancel" button to abort!</p>
 <form action="disable" method="post">
 <input type="submit" value="Remove" />
-<input type="reset" value="Cancel" />
+<a href="/mesh"><input type="button" name="cancel" value="Cancel" /></a>
 </form>
 
 </div>
