Updated [success,failure].html to reference the icon in the bottom-left corner as the start menu.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/home/guest/.passfail/failure.html
+++ b/porteus/home/guest/.passfail/failure.html
@@ -66,7 +66,8 @@
         USB wireless devices so chances are our driver kit will detect and configure it.  When you have time later
         <a href="https://github.com/Byzantium/Byzantium/issues">please file a trouble ticket</a> and we'll fix it in the next release.</p>
         <p class="lead">Regardless, you have a fully functional desktop at your fingertips, so you can plug USB drives in, copy and edit
-        files, and do other workstation things.  You can also plug mobile devices into this computer to recharge them.</p>
+        files, and do other workstation things (just click the icon in the bottom-left corner).  You can also plug mobile devices into
+        this computer to recharge them.</p>
 
       </div>
 
