--- a/porteus/home/guest/.passfail/success.html
+++ b/porteus/home/guest/.passfail/success.html
@@ -61,7 +61,7 @@
         <h1>Your Byzantium node is online!</h1>
         <p class="lead">Byzantium Linux has automatically configured itself, so you don't have to do anything else.</p>
         <p class="lead">No, really, you just set up a mesh node.  This is all you have to do.</p>
-        <p class="lead">However, you also have a fully functional desktop at your fingertips.
+        <p class="lead">However, you also have a fully functional desktop at your fingertips, just click the icon in the bottom-left corner.
         You can also plug mobile devices into this node to recharge them, and if you plug a network cable into
         the appropriate jack this node will turn itself into a gateway for the rest of the mesh.</p>
         <p class="lead">Also, Byzantium is now fully compatible with <a href="https://commotionwireless.net/">Commotion Wireless</a>,
