Looked up how to force users to join a certain channel when they hit the QwebIRC server.
Commented some more stuff out of the Apache httpd.conf file.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/services/index.html
+++ b/services/index.html
@@ -8,8 +8,8 @@
     <body>
     <h1>Services running on your local mesh node:</h1>
     <ul>
-    <li><a href="http://localhost:8089/">Network map</a> (local only)</li>
-    <li><a href="/chat">Web chat</a></li>
+    <li><a href="/olsrviz">Network map</a></li>
+    <li><a href="/chat/?channels=byzantium">Web chat</a></li>
     <li><a href="/pad">Notepad</a></li>
     </ul>
     <script src="js/jquery-latest.js"></script>
