Fixed the URL to Etherpad-Lite.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/services/index.html
+++ b/services/index.html
@@ -12,7 +12,7 @@
 <ul>
 <li><a href="/olsrviz">Network map</a></li>
 <li><a href="/chat/?channels=byzantium">Web chat</a></li>
-<li><a href="/pad">Notepad</a></li>
+<li><a href="/pad/">Notepad</a></li>
 </ul>
 
 <script src="js/jquery-latest.js"></script>
