--- a/services/index.html
+++ b/services/index.html
@@ -8,7 +8,7 @@
     <body>
     <h1>Services running on your local mesh node:</h1>
     <ul>
-    <li><a href="/olsrviz">Network map</a></li>
+    <li><a href="http://localhost:8089/">Network map</a> (local only)</li>
     <li><a href="/chat">Web chat</a></li>
     <li><a href="/pad">Notepad</a></li>
     </ul>
