changed title on failure.html to reflect that autoconfiguration has failed

--- a/porteus/home/guest/.passfail/failure.html
+++ b/porteus/home/guest/.passfail/failure.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Your Byzantium node is online!</title>
+    <title>Something went wrong.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="If the user sees this page, it means that Byzantium Linux did not successfully configure itself.">
     <meta name="author" content="The Doctor" >
