Take advantage of Bootstrap's responsive features
This solves the scaling and makes things look nicer on devices like
iPods which have smaller screens.

Fixes #208

--- a/services/index.html
+++ b/services/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Byzantium Mesh Services</title>
 <!-- Bootstrap -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 
@@ -14,7 +15,6 @@
 <li><a href="/pad/">Notepad</a></li>
 </ul>
 
-<script src="js/jquery-latest.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
 
